# scholarGradeAPP

./: .gitignore  .pdm-python  README.md  config.py  dump.sql  pyproject.toml  run.py
app/: __init__.py
app/models/: user.py
app/services/: student_service.py  teacher_service.py  user_service.py
app/templates/: add_grade.html  login.html  register.html  student_grades.html  users.html
app/utils/: database.py
app/views/: student_view.py  teacher_view.py  user_views.py
